--- a/CSS/main.css
+++ b/CSS/main.css
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Segoe UI, Tahoma, Geneva, Verdana, sans-serif';
-	width: 100%;
+	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -13,24 +13,24 @@ p.text {
 }
 
 div.text {
-	color: white;
-	background-color: black;
+	color: hsl(0, 0%, 100%);
+	background-color: hsl(0, 0%, 0%);
 }
 
 div#topnavbar {
 	position: fixed;
 	z-index: 10;
-	top: 0;
 	height: 50px;
 	width: 100%;
-	background-color: lightblue;
-	color: black;
-	box-shadow: 2px 2px 4px lightgray;
+	background-color: hsl(195, 53%, 79%);
+	color: hsl(0, 0%, 0%);
+	box-shadow: 2px 2px 4px hsl(0, 0%, 83%);
 }
 
 div#leftmenu {
-	position:fixed;
+	position: absolute;
 	top: 50px;
+	float: left;
 	width: 200px;
 	height: calc(100% - 50px);
 	background-color: transparent;
@@ -41,14 +41,14 @@ div#leftmenuinner {
 	width: 100%;
 	overflow-y: scroll;
 	overflow-x: hidden;
-	background-color: lightgray;
-	color: black;
+	background-color: hsl(0, 0%, 83%);
+	color: hsl(0, 0%, 0%);
 }
 
 div#mainbody {
-	position: absolute;
+	position: relative;
+	float: right;
 	top: 50px;
-	left: 200px;
 	width: calc(100% - 200px);
 	height: calc(100% - 50px);
 	background-color: transparent;
