--- a/CSS/main.css
+++ b/CSS/main.css
@@ -5,16 +5,8 @@ body {
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
-}
-
-p.text {
-	float: left;
-	align-content: center;
-}
-
-div.text {
-	color: hsl(0, 0%, 100%);
-	background-color: hsl(0, 0%, 0%);
+	color: rgb(0, 0, 0);
+	background-color: rgb(255, 255, 255);
 }
 
 div#topnavbar {
@@ -22,13 +14,13 @@ div#topnavbar {
 	z-index: 10;
 	height: 50px;
 	width: 100%;
-	background-color: hsl(195, 53%, 79%);
-	color: hsl(0, 0%, 0%);
-	box-shadow: 2px 2px 4px hsl(0, 0%, 83%);
+	background-color: rgb(173, 215, 229);
+	color: rgb(0, 0, 0);
+	box-shadow: 2px 2px 4px rgb(211, 211, 211);
 }
 
 div#leftmenu {
-	position: absolute;
+	position: fixed;
 	top: 50px;
 	float: left;
 	width: 200px;
@@ -41,8 +33,8 @@ div#leftmenuinner {
 	width: 100%;
 	overflow-y: scroll;
 	overflow-x: hidden;
-	background-color: hsl(0, 0%, 83%);
-	color: hsl(0, 0%, 0%);
+	background-color: rgb(211, 211, 211);
+	color: rgb(0, 0, 0);
 }
 
 div#mainbody {
