--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	font-family: 'Segoe UI, Tahoma, Geneva, Verdana, sans-serif';
+	font-family: Arial, Helvetica, sans-serif;
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
